--- a/views/chitter.erb
+++ b/views/chitter.erb
@@ -1,13 +1,12 @@
 <Div id = 'new-peep'>
 <form method='post' action='/chitter'>
- <input type='text' name='status' />
+<input type = 'text' name = 'status' />
   <input type='submit' value='Submit' />
   </form>
-  <button type="button" name="Update"> 
   <ul>
     <p>
     <% @peep.each do |peep| %>
-    <li> status </li>
+    <li> <%= peep %> </li>
     <% end %>
     <p>
   </ul>
